# smili

./: BUILDING.md  CMakeLists.txt  Copyright.txt  README.md  RELEASE.md  load_dependencies.bat  smili.Doxyfile  smili.qrc
CMake/: FindPySide2.cmake  FindSMILI.cmake  FindShiboken2.cmake  PythonModuleBuild.cmake  find.cmake  macros.cmake  version.cmake  zlib.cmake
apps/: CMakeLists.txt
apps/milxAnimate/: CMakeLists.txt  milxAnimate.cpp
apps/milxAssistant/: CMakeLists.txt  milxAssistant.cpp
apps/milxBlend/: CMakeLists.txt  milxBlend.cpp  milxBlend.in
apps/milxDICOMApp/: CMakeLists.txt  milxDICOMApp.cxx  milxDICOMApp.sh
apps/milxDeformableModelApp/: CMakeLists.txt  milxDeformableModelApp.cxx
apps/milxHausdorffDistance/: CMakeLists.txt  milxHausdorffDistance.cpp
apps/milxImageApp/: CMakeLists.txt  milxImageApp.cxx
apps/milxImageViewer/: CMakeLists.txt  milxImageViewer.cpp
apps/milxLabelVisualisation/: CMakeLists.txt  milxLabelVisualisation.cpp
apps/milxModelApp/: CMakeLists.txt  milxModelApp.cxx
apps/milxModelViewer/: CMakeLists.txt  milxModelViewer.cpp
apps/milxOverlay/: CMakeLists.txt  milxOverlay.cpp
apps/smilx/: CMakeLists.txt  license.txt  smilx.cpp  smilx.desktop.in  smilx.icns  smilx.rc  smilx.sh.in
docs/: build.txt  deployment.txt  description.txt  development-notes.txt  faq.txt  features.txt  paradigm.txt  qt6_port.txt  todo.txt
include/: milxDeformableModel.h  milxFile.h  milxGlobal.h  milxImage.h  milxMath.h  milxModel.h
include/Qt/: milxQtAliases.h  milxQtConsole.h  milxQtFile.h  milxQtImage.h  milxQtMain.h  milxQtModel.h  (+6 more)
plugin/: CMakeLists.txt
plugin/animate/: CMakeLists.txt  milxQtAnimateModel.cpp  milxQtAnimateModel.h  milxQtAnimatePlugin.cpp  milxQtAnimatePlugin.h
plugin/dicom/: CMakeLists.txt  milxQtDICOMPlugin.cpp  milxQtDICOMPlugin.h  milxQtDICOMPlugin.json
plugin/dti/: CMakeLists.txt  milxQtDiffusionTensorImage.cpp  milxQtDiffusionTensorImage.h  milxQtDiffusionTensorModel.cpp  milxQtDiffusionTensorModel.h  milxQtDiffusionTensorPlugin.cpp  milxQtDiffusionTensorPlugin.h  vtkDiffusionTensorGlyphFilter.cxx  vtkDiffusionTensorGlyphFilter.h
plugin/finitetransform/: CMakeLists.txt  milxQtFiniteTransformPlugin.cpp  milxQtFiniteTransformPlugin.h
plugin/plugin_guide/: CMakeLists.txt  milxQt_RENAMED_Plugin.cpp  milxQt_RENAMED_Plugin.h  plugin_guide.odt
plugin/plugin_guide/snippets/: info.txt
plugin/plugin_guide/snippets/dicom_menus/: CMakeLists.txt  milxQtDICOMPlugin.cpp  milxQtDICOMPlugin.h
plugin/plugin_guide/snippets/dicom_wizard/: milxQtDICOMPlugin.cpp  milxQtDICOMPlugin.h
plugin/python/: CMakeLists.txt  milxQtPythonConsole.cpp  milxQtPythonConsole.h  milxQtPythonPlugin.cpp  milxQtPythonPlugin.h
plugin/registration/: CMakeLists.txt  milxQtRegistration.cpp  milxQtRegistration.h  milxQtRegistrationAdvancedOptions.cpp  milxQtRegistrationAdvancedOptions.h  milxQtRegistrationAlgos.cpp  milxQtRegistrationAlgos.h  milxQtRegistrationImage.cpp  milxQtRegistrationImage.h  milxQtRegistrationNiftiReg.cpp  milxQtRegistrationNiftiReg.h  milxQtRegistrationParams.cpp  milxQtRegistrationParams.h  milxQtRegistrationPlugin.cpp  milxQtRegistrationPlugin.h  milxQtRegistrationStructures.h  milxQtRegistrationWindow.cpp  milxQtRegistrationWindow.h  registrationAdvancedOptions.ui  registrationWindow.ui
plugin/registration/elastix/: elxComponentLoader.cxx  elxElastixMain.cxx  elxElastixMain.h
plugin/registration/itk/: milxRegistration.cxx  milxRegistration.h
plugin/ssm/: CMakeLists.txt  itkRobustStatisticalShapeModel.h  itkRobustStatisticalShapeModel.txx  itkStatisticalShapeModel.h  itkStatisticalShapeModel.txx  itkStatisticalShapeModelBase.h  itkStatisticalShapeModelBase.txx  itkStatisticalShapeTimepointModel.h  itkStatisticalShapeTimepointModel.txx  milxConfigure.h  milxQtRobustShapeModel.cpp  milxQtRobustShapeModel.h  milxQtSSMPlugin.cpp  milxQtSSMPlugin.h  milxQtShapeModel.cpp  milxQtShapeModel.h  milxWin32Header.h  readme.txt  vtkPCAAnalysisTimepointFilter.cxx  vtkPCAAnalysisTimepointFilter.h  vtkWeightedPCAAnalysisFilter.cxx  vtkWeightedPCAAnalysisFilter.h
projects/: CMakeLists.txt
python/: CMakeLists.txt  main.py  test_polydata.py
python/PySMILI/: CMakeLists.txt  __init__.py.cmake  smili_global.h  typesystem_smili.xml
resources/: about.html  credits.html  doc.html  human.mtl  index.html  publications.html  quick_start.html
scripts/: batch.py  batch_concatenate_surfaces.py  batch_hausdorff.py  batch_overlay.py  filenames.py  smilx_convertDFtoVTK.py  smilx_convert_images.py  smilx_flip_surfaces.py  smilx_hausdoff.py  smilx_iso_surfaces.py  smilx_match.py  smilx_process_surfaces.py  smilx_pv_visualisation.py  smilx_screenshot.py  smilx_screenshot_hip.py  smilx_screenshot_hip_fixed.py  smilx_test_features.py
src/: CMakeLists.txt  milxDeformableModel.cxx  milxFile.cxx  milxModel.cxx
src/Qt/: CMakeLists.txt  milxQtConsole.cpp  milxQtFile.cpp  milxQtImage.cpp  milxQtMain.cpp  milxQtManager.cpp  milxQtModel.cpp  milxQtPlot.cpp  milxQtRenderWindow.cpp  milxQtUnifiedWindow.cpp  milxQtWindow.cpp
src/utils/: milxColourMap.cxx
src/vtk-ext/: CMakeLists.txt  vtkAreaSimplificationMetric.cxx  vtkImageViewer3.cxx  vtkInteractorStyleImage2.cxx
src/wip/: milxFile_Threaded.cxx
tests/: CMakeLists.txt
tests/imageViewer/: CMakeLists.txt  imageViewer.cxx  itkImageToVTKImageFilter.txx
tests/milxHausdorffDistanceBetweenSurfaces/: CMakeLists.txt  milxHausdorffDistanceBetweenSurfaces.cxx
tests/milxPlotXY/: CMakeLists.txt  milxPlotXY.cxx
tests/prototype_image_planes/: CMakeLists.txt  prototype_image_planes.cxx
tests/prototype_image_slice/: CMakeLists.txt  prototype_image_slice.cxx
tests/prototype_plot_surface/: CMakeLists.txt  prototype_plot_surface.cxx
tests/prototype_plot_xy/: CMakeLists.txt  prototype_plot_xy.cxx
tests/prototype_vectorimage/: CMakeLists.txt  prototype_vectorimage.cxx
ui/: about.ui  controls.ui  milxQtAboutForm.cpp  milxQtAboutForm.h  milxQtControlsForm.cpp  milxQtControlsForm.h  milxQtPreferencesForm.cpp  milxQtPreferencesForm.h  milxQtThemeEditor.cpp  milxQtThemeEditor.h  preferences.ui  themeEditor.ui
(+43 files in other folders)
