PROJECT(milxDICOMApp)

INCLUDE_DIRECTORIES(${SMILI_INCLUDE_DIRS})

link_directories(${ITK_LIBRARY_DIRS} ${SMILI_BINARY_DIR}/lib)

#~ ADD_DEFINITIONS(-DSMILI_DLL)

ADD_EXECUTABLE(milxDICOMApp MACOSX_BUNDLE milxDICOMApp.cxx)
TARGET_LINK_LIBRARIES(milxDICOMApp ${ITK_LIBRARIES} ${ZLIB_LIBRARIES} milx-SMILI)

IF(UNIX)
  configure_file(milxDICOMApp.in "milxDICOMApp" @ONLY)
  
  install(FILES "${PROJECT_BINARY_DIR}/milxDICOMApp" DESTINATION "../../bin" 
    PERMISSIONS WORLD_READ WORLD_EXECUTE)
ENDIF(UNIX)

# expand the command line wild-cards in msvc
IF(MSVC)
  SET_TARGET_PROPERTIES(milxDICOMApp PROPERTIES LINK_FLAGS "setargv.obj")
ENDIF(MSVC)

INSTALL(TARGETS milxDICOMApp 
    BUNDLE DESTINATION . COMPONENT Runtime
    RUNTIME DESTINATION bin COMPONENT Runtime
)
